fixing of cover image tag as per live. top name links padding fix, logo alignment fix, generic img min height fix as per live and store locatore js test

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/store-locator.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/store-locator.scss
@@ -8,9 +8,11 @@
 
   $line-height-base: 1.6;
   $line-height-computed: math.floor(($font-size-base * $line-height-base));
+  @include font-family-Neotech-roboto();
   line-height: 1.6;
   transition: margin-top 0.3s ease-in-out 1.5s;
   margin-top: -55px;
+  
 
   @include respond-to-min($desktop) {
     & {
@@ -32,7 +34,9 @@
   @include respond-to-min($desktop-large) {
     & {
       margin-top: -129px;
+      margin-bottom: -50px;
     }
+    
     .col-lg-offset-2 {
       margin-left: 16.66666667%;
       width: 66.66666667%;
