--- a/ui.frontend/src/main/webpack/global/styles/components/header/mega-navigation.scss
+++ b/ui.frontend/src/main/webpack/global/styles/components/header/mega-navigation.scss
@@ -73,7 +73,7 @@
         a {
           margin-bottom: 0;
          @media (min-width: 992px) {
-           margin-bottom: toRem(5);
+           margin-bottom: toRem(1);
           }
           transition: all 0.25s ease-in-out;
           width: toRem(86);
@@ -134,8 +134,8 @@
 
             @media (min-width: 1248px) {
               min-width: 108px;
-              padding-left: 1.6rem;
-              padding-right: 1.6rem;
+              padding-left: toRem(23);
+              padding-right: toRem(23);
               text-align: center;
             }
 
