--- a/ui.frontend/src/main/webpack/global/styles/components/header/top-navigation.scss
+++ b/ui.frontend/src/main/webpack/global/styles/components/header/top-navigation.scss
@@ -233,10 +233,6 @@ html[lang="ar"] {
       a {
         padding: 0 1rem;
 
-        @media (min-width: 992px) and (max-width: 1280px) {
-          padding: 0 0.5rem;
-        }
-
         svg {
           stroke: $almost-black;
         }
@@ -294,7 +290,7 @@ html[lang="ar"] {
           position: relative;
 
           @media (min-width: 992px) and (max-width: 1366px) {
-            padding: 0 0.5rem;
+            padding: 0 1.5rem;
           }
 
           .nav-link-icon {
@@ -361,7 +357,7 @@ html[lang="ar"] {
         }
 
         .arabic-lang-content {
-          font-family: GE SS Two, Arial, sans-serif;
+          font-family: "GE SS Two", Arial, sans-serif;
           font-size: $font16;
           font-weight: 100;
           letter-spacing: 0;
@@ -424,7 +420,7 @@ html[lang="ar"] {
           }
 
           .arabic-lang-content {
-            font-family: GE SS Two, Arial, sans-serif;
+            font-family: "GE SS Two", Arial, sans-serif;
             font-size: $font16;
             font-weight: 100;
             letter-spacing: 0;
